test/parse-fail/slot-pattern-no-initializer.stderr
[0;37mtest/parse-fail/slot-pattern-no-initializer.as:1.6-7: [0;31merror: [1;37mexpected `=`; found `;`[0m
[0;37mtest/parse-fail/slot-pattern-no-initializer.as:2.11-12: [0;31merror: [1;37mexpected `=`; found `;`[0m
