test/parse-fail/slot-pattern-no-initializer.as
let _;
let (a, b);
